<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addNewCar">

    <EditText
        android:id="@+id/tv_carMOT"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/MOTend"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carInsurance" />

    <EditText
        android:id="@+id/carPrice"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/carPrice"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carModel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="28dp"
        android:onClick="@android:string/cancel"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Add_vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/carMake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/carMake"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/carModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/carModel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carMake" />

    <EditText
        android:id="@+id/carYear"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/carYear"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carModel" />

    <EditText
        android:id="@+id/tv_carInsurance"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/insuranceDate"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carPrice" />

    <ImageView
        android:id="@+id/iv_carPic"
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btn_addImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carMOT"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="144dp"
        android:text="@string/addImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_carPic" />

</androidx.constraintlayout.widget.ConstraintLayout>