<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_deleteCar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".openedCar">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/details"
        android:focusable="true"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddInsurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_ins_mot"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingAddGPS"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:srcCompat="@drawable/ic_baseline_next_insurance_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/addExpense"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:srcCompat="@drawable/ic_baseline_add_expense24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddMOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_gps"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingAddInsurance"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:srcCompat="@drawable/wrench4" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_gps"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingAddExpense"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/tv_carMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_carModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_carMake"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_carPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tv_carModel" />

    <TextView
        android:id="@+id/tv_carYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_carPrice" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/carPrice"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carMake"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/carYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/year1" />

    <Button
        android:id="@+id/btn_delCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_getGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/getGPS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_delCar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/endMOT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_mot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_carYear" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/insuranceDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_insurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_mot" />

    <TextView
        android:id="@+id/tv_fabmot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/addmot"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingAddMOT"
        app:layout_constraintEnd_toStartOf="@+id/floatingAddMOT" />

    <TextView
        android:id="@+id/tv_fabins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/addins"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingAddInsurance"
        app:layout_constraintEnd_toStartOf="@+id/floatingAddInsurance" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/savelocation"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingAddGPS"
        app:layout_constraintEnd_toStartOf="@+id/floatingAddGPS" />

    <TextView
        android:id="@+id/tv_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/addExpense"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/floatingAddExpense"
        app:layout_constraintEnd_toStartOf="@+id/floatingAddExpense" />

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:srcCompat="@tools:sample/avatars" />

    <ListView
        android:id="@+id/lv_expenses"
        android:layout_width="254dp"
        android:layout_height="178dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delCar"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>